[package]
edition = "2021"
name = "rustls-libcrux-demo-server"
version = "0.1.0"

[dependencies]
actix-tls = { version = "3.5.0", features = ["rustls-0_23"] }
actix-web = { version = "4.14.0", features = ["rustls-0_23"] }
env_logger = "0.11.11"
handlebars = "6.4.3"
log = "0.4.33"
rustls = "0.23.42"
rustls-libcrux-provider = { workspace = true }
serde = { version = "1.0.229", features = ["derive"] }
