[package]
name = "rustls-libcrux-provider"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "A rustls crypto provider based on libcrux."

[dependencies]
rustls = { version = "0.23.36" }

libcrux = "0.0.3"
libcrux-traits = "0.0.6"

hpke-rs = { version = "0.5", features = ["hazmat"]}

der = "0.7"
pkcs8 = "0.10.2"
pkcs1 = "0.7.5"
pki-types = { package = "rustls-pki-types", version = "1" }
rand_core = { version = "0.9", features = ["os_rng"] }
sec1 = { version = "0.7.3" }
webpki = { package = "rustls-webpki", version = "0.103", features = [
    "alloc", 
], default-features = false }

[dev-dependencies]
env_logger = "0.11"
rcgen = { version = "0.13", features = ["aws_lc_rs"] }
webpki-roots = "0.26"

[features]
default = ["std"]
std = ["pkcs8/std", "rustls/std"]
