[package]
description = "A rustls crypto provider based on libcrux."
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
name = "rustls-libcrux-provider"
version = "0.0.1"

[dependencies]
rustls = { version = "0.23.42" }

libcrux = "0.0.5"
libcrux-traits = "0.0.8"

hpke-rs = { version = "0.7", features = ["hazmat"] }

der = "0.8"
pkcs1 = "0.7.5"
pkcs8 = "0.11.0"
pki-types = { package = "rustls-pki-types", version = "1" }
rand = { version = "0.10", features = ["sys_rng"] }
sec1 = { version = "0.8.1" }
webpki = { package = "rustls-webpki", version = "0.103", features = [
    "alloc",
], default-features = false }

[dev-dependencies]
env_logger = "0.11"
rcgen = { version = "0.14", features = ["aws_lc_rs"] }
webpki-roots = "1.0"

[features]
default = ["std"]
std = ["pkcs8/std", "rustls/std"]
